Fix theme width on mobile

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -63,7 +63,7 @@ a:hover {
 #content {
     padding: 2em 1em 0 1em;
     max-width: 60em;
-    width: 100%;
+    width: 90%;
     margin: auto;
 }
 
@@ -71,7 +71,7 @@ a:hover {
     padding-left: 1em;
     padding-right: 1em;
     max-width: 60em;
-    width: 100%;
+    width: 90%;
     margin: auto;
 }
 
